force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_a2U__c.field-meta.xml
<CustomField>
    <fullName>Parent_a2U__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>