force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_a2W__c.field-meta.xml
<CustomField>
    <fullName>Parent_a2W__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission_Requirement</label>
    <referenceTo>Submission_Requirement__c</referenceTo>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>