force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Proposal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Stage__c</fullName>
    <label>Proposal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proposal_Stage</valueSetName>
    </valueSet>
</CustomField>